# ER_crawler

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
config/: default.yaml
db/: schema.sql
docs/ERD/: erd.vuerd.json
scripts/: crawler.py  db_utils.py  init_db.py  load_to_mysql.py  main.py  parser.py  parsing.py  utils.py
