[tool.poetry]
name = "ER-crawler"
version = "0.1.0"
description = "A Eternal Return crawling"
authors = ["JSJ <ksj006151@gmail.com>"]
packages = [
    { include = "scripts" }
]
[tool.poetry.dependencies]
python = ">=3.10,<3.12"
requests = "^2.32.3"
pymysql = "^1.1.0"
tqdm = "^4.67.1"
python-dotenv = "^1.1.0"
dbutils = "^3.1.0"
aiohttp = "^3.11.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"